* 5.15		27.09.2006	Johannes Winkelmann
- fix PKGMK_PACKAGE_DIR determination

* 5.14		13.09.2006	Johannes Winkelmann
- Remove handling of external dependency list
- make InstallTransaction::getPkgDest use pkgmk.conf from install-root
- revert getPkgDest to ignore install-root
- determine PKGMK_PACKAGE_DIR using fgrep without sourcing pkgmk.conf
- fix bug in "undecided" output of diff (thanks treach)
- fix bug in version comperator introduced in 5.13


* 5.13		08.09.2006	Johannes Winkelmann
- Show undecided versions in diff and sysup when using "prefer higher"
- fix display bug in "dependent"
- fix bug in version comparator
- Simplify output of 'dup', suggested by maro (-v -> old format)

* 0.5.12	00.04.2006  Johannes Winkelmann
- Add 'depinst' in 'help' (thanks Simone)
- Fix compilation on OpenBSD
- Show alias info in depends
- don't install alias file and deplist
- unlock ports on remove
- fix lock: previously locking would only work for ports in the ports tree
- allow to remove log files of successful builds
- print update summary right before running the addcommand
- print full add command and PACKAGE_DIR info when using install/update -v
- Make 'cat' and 'readme' use $PAGER if set
- update default prt-get.conf to reflect new port hierarchy (core/opt/contrib)
- add timestamps to log files
- fix aliasing bug introduce earlier in the .12 session (thanks Mark)
- add --recursive and --tree for dependent
- add listorphans command

* 0.5.11	29.05.2005  Johannes Winkelmann
- add --path to 'ls'
- initial regex support
- replace `uname -r` and `date +...` in version strings
- add 'useregex' config key and --regex command line argument
- Add --full to fsearch
- use regex in fsearch if requested
- add leading slash to fsearch result
- support both `` and $()
- support date patterns like '+%Y'
- add aliases and deplist to dist-tarball
- support multiple shell patterns in version

* 0.5.10	21.04.2005  Johannes Winkelmann
- fix bugs #3735, #3836